# marketing-analytics

./: .gitignore  ga4_query.py  gsc_agent.py  gsc_auth.py  gsc_chat_ui.py  gsc_chatgpt.py  gsc_mcp_server.py  gsc_query.py  issue.md  pyproject.toml  設計書.md
analyst-poc/: gsc_auth.py
backend/: Dockerfile  README.md  package-lock.json  package.json
backend/src/app/: layout.tsx  page.tsx
backend/src/app/api/chat/: route.ts
backend/src/lib/: google-auth-mode.ts
backend/src/lib/server/: cors.ts  env.ts  frontend-url.ts  request-auth.ts
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: auth-mode-panel.tsx  auth-mode-toggle.tsx  google-connect-button.tsx  gsc-chat-panel.tsx  sign-in-view.tsx
frontend/src/lib/: browser-config.ts  google-auth-mode.ts  server-config.ts
gsc-analyst/: .dockerignore  Dockerfile.frontend  README.md  package-lock.json  package.json
gsc-analyst/src/app/: layout.tsx  page.tsx
gsc-analyst/src/app/dashboard/: page.tsx
gsc-analyst/src/components/: auth-mode-toggle.tsx  gsc-chat-panel.tsx  gsc-sites-panel.tsx  sign-in-view.tsx
gsc-analyst/src/lib/analytics/: types.ts
gsc-analyst/src/lib/gsc/: types.ts
hubspot/: README.md  hubspot_api_client.py  要件定義.md
hubspot/ui-extension/: .gitignore  README.md  next.config.js  package-lock.json  package.json
hubspot/ui-extension/src/app/: layout.tsx  page.tsx
hubspot/ui-extension/src/components/: ErrorBoundary.tsx
(+34 files in other folders)
